# make-2Dspline

./: CMakeLists.txt  README.md
include/: spline.h
src/: main.cpp  spline.cpp
testdata/: XYoutputdata.csv  XYtest.csv
